# hostel

./: Cargo.toml  build.rs  rust-toolchain.toml
boot/: Cargo.toml
boot/src/: main.rs
kernel/: Cargo.toml
kernel-benches/: Cargo.toml
kernel-benches/benches/: kmalloc.rs
kernel-benches/src/: lib.rs
kernel-benches/tests/: kmalloc_alloc_free.rs
kernel-tests/: Cargo.toml
kernel-tests-macros/: Cargo.toml
kernel-tests-macros/src/: lib.rs
kernel-tests/src/: api.rs  lib.rs  test_process.rs
kernel/src/: address.rs  boot.rs  console.rs  constants.rs  error.rs  lib.rs  main.rs  page_alloc.rs  pagetable.rs  palloc.rs  process.rs  scheduler.rs  types.rs  vmm.rs
kernel/src/boot/: mod.rs
kernel/src/memory/: address.rs  constants.rs  errors.rs  mod.rs  pagetable.rs  vmm.rs
kernel/src/memory/alloc/: kmalloc.rs  mod.rs  palloc.rs
kernel/src/syscall/: handlers.rs  mod.rs
src/: dynsym.rs  lib.rs  main.rs  text.rs  types.rs
src/loader/: code_buffer.rs  error.rs  executable.rs  mod.rs  module.rs  vm.rs
src/loader/arch/: mod.rs
src/loader/arch/x64/: mod.rs
src/vm/: error.rs  mod.rs  serial.rs  x64.rs
tests/: integration.rs
tests/bins/: get_pid_syscall.rs  write_syscall.rs
