[package]
name = "hostel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
goblin = { version = "0.10.5" }
clap = { version = "4.0", features = ["derive"] }
thiserror = "2.0.18"

kvm-bindings = "0.14.0"
kvm-ioctls = "0.24.0"
vm-memory = { version = "0.18.0", features = ["backend-mmap"] }
kernel = { path = "kernel" }


[build-dependencies]
kernel = { path = "kernel" }

[workspace]
members = ["kernel", "kernel-tests", "kernel-tests-macros"]
