[package]
name = "kernel-benches"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../kernel", features = ["bench-memory-limit"] }
rand = "0.10.0"
rand_distr = "0.6.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "kmalloc"
harness = false
